parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> pgm
Rule 1     pgm -> DeclSeq
Rule 2     DeclSeq -> Decl DeclSeq
Rule 3     DeclSeq -> empty
Rule 4     empty -> <empty>
Rule 5     Decl -> VarDecl
Rule 6     Extension -> VarDecl
Rule 7     Extension -> VarDecl Extension
Rule 8     Extension -> stmtSeq
Rule 9     Decl -> FunDecl
Rule 10    Decl -> ClassDecl
Rule 11    VarDecl -> Type VarList SCOLON
Rule 12    stmtSeq -> stmt stmtSeq
Rule 13    stmtSeq -> empty
Rule 14    Type -> INT
Rule 15    Type -> BOOL
Rule 16    Type -> ID
Rule 17    Type -> VOID
Rule 18    VarList -> Var COMMA VarList
Rule 19    VarList -> Var
Rule 20    Var -> ID DimStar
Rule 21    DimStar -> LBRACKET RBRACKET
Rule 22    FunDecl -> Type ID LPAREN fseen FormalOpt RPAREN stmt
Rule 23    fseen -> empty
Rule 24    FormalOpt -> Type ID
Rule 25    FormalOpt -> empty
Rule 26    FunctionCall -> ID LPAREN Args RPAREN
Rule 27    Args -> AE
Rule 28    Args -> empty
Rule 29    ClassDecl -> CLASS ID LBRACE Extension RBRACE
Rule 30    DimStar -> empty
Rule 31    DimStar -> LBRACKET RBRACKET DimStar
Rule 32    stmt -> matchedstmt
Rule 33    stmt -> openstmt
Rule 34    matchedstmt -> SE SCOLON
Rule 35    matchedstmt -> Print
Rule 36    matchedstmt -> While
Rule 37    matchedstmt -> Block
Rule 38    matchedstmt -> doWhile
Rule 39    matchedstmt -> for
Rule 40    matchedstmt -> ReturnOpt SCOLON
Rule 41    ReturnOpt -> RETURN AE
Rule 42    ReturnOpt -> RETURN VOID
Rule 43    openstmt -> IF AE THEN stmt
Rule 44    openstmt -> IF AE THEN matchedstmt ELSE openstmt
Rule 45    matchedstmt -> IF AE THEN matchedstmt ELSE matchedstmt
Rule 46    SE -> LHS EQUALS AE
Rule 47    LHS -> FieldAccess
Rule 48    LHS -> ArrayAccess
Rule 49    FieldAccess -> ID
Rule 50    FieldAccess -> Primary DOT ID
Rule 51    SE -> INCREMENT LHS
Rule 52    SE -> DECREMENT LHS
Rule 53    Print -> PRINT LPAREN AE RPAREN SCOLON
Rule 54    While -> WHILE AE DO matchedstmt
Rule 55    doWhile -> DO matchedstmt WHILE AE SCOLON
Rule 56    for -> FOR LPAREN SEopt SCOLON AEopt SCOLON SEopt RPAREN matchedstmt
Rule 57    SEopt -> SE
Rule 58    SEopt -> empty
Rule 59    AEopt -> AE
Rule 60    AEopt -> empty
Rule 61    AE -> SE
Rule 62    AE -> Primary
Rule 63    Primary -> FieldAccess
Rule 64    Primary -> FunctionCall
Rule 65    Primary -> INPUT LPAREN RPAREN
Rule 66    Primary -> TRUE
Rule 67    Primary -> FALSE
Rule 68    Primary -> LPAREN AE RPAREN
Rule 69    Primary -> NUMBER
Rule 70    AE -> AE PLUS AE
Rule 71    AE -> AE MINUS AE
Rule 72    AE -> AE MULT AE
Rule 73    AE -> AE DIVIDE AE
Rule 74    AE -> AE MOD AE
Rule 75    AE -> MINUS AE
Rule 76    AE -> AE GREATERTHAN AE
Rule 77    AE -> AE GREATEROREQUAL AE
Rule 78    AE -> AE LESSTHAN AE
Rule 79    AE -> AE LESSOREQUAL AE
Rule 80    AE -> AE ISEQUAL AE
Rule 81    AE -> AE NOTEQUAL AE
Rule 82    AE -> AE AND AE
Rule 83    AE -> AE OR AE
Rule 84    AE -> NOT AE
Rule 85    Primary -> ArrayAccess
Rule 86    Primary -> NEW ID LPAREN RPAREN
Rule 87    AE -> NEW Type DimExpr DimStar
Rule 88    ArrayAccess -> Primary LBRACKET AE RBRACKET
Rule 89    DimExpr -> LBRACKET AE RBRACKET
Rule 90    Block -> LBRACE seen Extension RBRACE
Rule 91    seen -> <empty>

Terminals, with rules where they appear

AND                  : 82
BOOL                 : 15
CLASS                : 29
COMMA                : 18
DECREMENT            : 52
DIVIDE               : 73
DO                   : 54 55
DOT                  : 50
ELSE                 : 44 45
EQUALS               : 46
FALSE                : 67
FOR                  : 56
GREATEROREQUAL       : 77
GREATERTHAN          : 76
ID                   : 16 20 22 24 26 29 49 50 86
IF                   : 43 44 45
INCREMENT            : 51
INPUT                : 65
INT                  : 14
ISEQUAL              : 80
LBRACE               : 29 90
LBRACKET             : 21 31 88 89
LESSOREQUAL          : 79
LESSTHAN             : 78
LPAREN               : 22 26 53 56 65 68 86
MINUS                : 71 75
MOD                  : 74
MULT                 : 72
NEW                  : 86 87
NOT                  : 84
NOTEQUAL             : 81
NUMBER               : 69
OR                   : 83
PLUS                 : 70
PRINT                : 53
RBRACE               : 29 90
RBRACKET             : 21 31 88 89
RETURN               : 41 42
RPAREN               : 22 26 53 56 65 68 86
SCOLON               : 11 34 40 53 55 56 56
THEN                 : 43 44 45
TRUE                 : 66
VOID                 : 17 42
WHILE                : 54 55
error                : 

Nonterminals, with rules where they appear

AE                   : 27 41 43 44 45 46 53 54 55 59 68 70 70 71 71 72 72 73 73 74 74 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 83 84 88 89
AEopt                : 56
Args                 : 26
ArrayAccess          : 48 85
Block                : 37
ClassDecl            : 10
Decl                 : 2
DeclSeq              : 1 2
DimExpr              : 87
DimStar              : 20 31 87
Extension            : 7 29 90
FieldAccess          : 47 63
FormalOpt            : 22
FunDecl              : 9
FunctionCall         : 64
LHS                  : 46 51 52
Primary              : 50 62 88
Print                : 35
ReturnOpt            : 40
SE                   : 34 57 61
SEopt                : 56 56
Type                 : 11 22 24 87
Var                  : 18 19
VarDecl              : 5 6 7
VarList              : 11 18
While                : 36
doWhile              : 38
empty                : 3 13 23 25 28 30 58 60
for                  : 39
fseen                : 22
matchedstmt          : 32 44 45 45 54 55 56
openstmt             : 33 44
pgm                  : 0
seen                 : 90
stmt                 : 12 22 43
stmtSeq              : 8 12

Parsing method: LALR

state 0

    (0) S' -> . pgm
    (1) pgm -> . DeclSeq
    (2) DeclSeq -> . Decl DeclSeq
    (3) DeclSeq -> . empty
    (5) Decl -> . VarDecl
    (9) Decl -> . FunDecl
    (10) Decl -> . ClassDecl
    (4) empty -> .
    (11) VarDecl -> . Type VarList SCOLON
    (22) FunDecl -> . Type ID LPAREN fseen FormalOpt RPAREN stmt
    (29) ClassDecl -> . CLASS ID LBRACE Extension RBRACE
    (14) Type -> . INT
    (15) Type -> . BOOL
    (16) Type -> . ID
    (17) Type -> . VOID

    $end            reduce using rule 4 (empty -> .)
    CLASS           shift and go to state 6
    INT             shift and go to state 11
    BOOL            shift and go to state 12
    ID              shift and go to state 8
    VOID            shift and go to state 1

    Decl                           shift and go to state 9
    ClassDecl                      shift and go to state 4
    VarDecl                        shift and go to state 10
    pgm                            shift and go to state 2
    FunDecl                        shift and go to state 5
    DeclSeq                        shift and go to state 13
    Type                           shift and go to state 3
    empty                          shift and go to state 7

state 1

    (17) Type -> VOID .

    LBRACKET        reduce using rule 17 (Type -> VOID .)
    ID              reduce using rule 17 (Type -> VOID .)


state 2

    (0) S' -> pgm .



state 3

    (11) VarDecl -> Type . VarList SCOLON
    (22) FunDecl -> Type . ID LPAREN fseen FormalOpt RPAREN stmt
    (18) VarList -> . Var COMMA VarList
    (19) VarList -> . Var
    (20) Var -> . ID DimStar

    ID              shift and go to state 16

    VarList                        shift and go to state 14
    Var                            shift and go to state 15

state 4

    (10) Decl -> ClassDecl .

    CLASS           reduce using rule 10 (Decl -> ClassDecl .)
    INT             reduce using rule 10 (Decl -> ClassDecl .)
    BOOL            reduce using rule 10 (Decl -> ClassDecl .)
    ID              reduce using rule 10 (Decl -> ClassDecl .)
    VOID            reduce using rule 10 (Decl -> ClassDecl .)
    $end            reduce using rule 10 (Decl -> ClassDecl .)


state 5

    (9) Decl -> FunDecl .

    CLASS           reduce using rule 9 (Decl -> FunDecl .)
    INT             reduce using rule 9 (Decl -> FunDecl .)
    BOOL            reduce using rule 9 (Decl -> FunDecl .)
    ID              reduce using rule 9 (Decl -> FunDecl .)
    VOID            reduce using rule 9 (Decl -> FunDecl .)
    $end            reduce using rule 9 (Decl -> FunDecl .)


state 6

    (29) ClassDecl -> CLASS . ID LBRACE Extension RBRACE

    ID              shift and go to state 17


state 7

    (3) DeclSeq -> empty .

    $end            reduce using rule 3 (DeclSeq -> empty .)


state 8

    (16) Type -> ID .

    ID              reduce using rule 16 (Type -> ID .)


state 9

    (2) DeclSeq -> Decl . DeclSeq
    (2) DeclSeq -> . Decl DeclSeq
    (3) DeclSeq -> . empty
    (5) Decl -> . VarDecl
    (9) Decl -> . FunDecl
    (10) Decl -> . ClassDecl
    (4) empty -> .
    (11) VarDecl -> . Type VarList SCOLON
    (22) FunDecl -> . Type ID LPAREN fseen FormalOpt RPAREN stmt
    (29) ClassDecl -> . CLASS ID LBRACE Extension RBRACE
    (14) Type -> . INT
    (15) Type -> . BOOL
    (16) Type -> . ID
    (17) Type -> . VOID

    $end            reduce using rule 4 (empty -> .)
    CLASS           shift and go to state 6
    INT             shift and go to state 11
    BOOL            shift and go to state 12
    ID              shift and go to state 8
    VOID            shift and go to state 1

    Decl                           shift and go to state 9
    ClassDecl                      shift and go to state 4
    VarDecl                        shift and go to state 10
    FunDecl                        shift and go to state 5
    DeclSeq                        shift and go to state 18
    Type                           shift and go to state 3
    empty                          shift and go to state 7

state 10

    (5) Decl -> VarDecl .

    CLASS           reduce using rule 5 (Decl -> VarDecl .)
    INT             reduce using rule 5 (Decl -> VarDecl .)
    BOOL            reduce using rule 5 (Decl -> VarDecl .)
    ID              reduce using rule 5 (Decl -> VarDecl .)
    VOID            reduce using rule 5 (Decl -> VarDecl .)
    $end            reduce using rule 5 (Decl -> VarDecl .)


state 11

    (14) Type -> INT .

    LBRACKET        reduce using rule 14 (Type -> INT .)
    ID              reduce using rule 14 (Type -> INT .)


state 12

    (15) Type -> BOOL .

    LBRACKET        reduce using rule 15 (Type -> BOOL .)
    ID              reduce using rule 15 (Type -> BOOL .)


state 13

    (1) pgm -> DeclSeq .

    $end            reduce using rule 1 (pgm -> DeclSeq .)


state 14

    (11) VarDecl -> Type VarList . SCOLON

    SCOLON          shift and go to state 19


state 15

    (18) VarList -> Var . COMMA VarList
    (19) VarList -> Var .

    COMMA           shift and go to state 20
    SCOLON          reduce using rule 19 (VarList -> Var .)


state 16

    (22) FunDecl -> Type ID . LPAREN fseen FormalOpt RPAREN stmt
    (20) Var -> ID . DimStar
    (21) DimStar -> . LBRACKET RBRACKET
    (30) DimStar -> . empty
    (31) DimStar -> . LBRACKET RBRACKET DimStar
    (4) empty -> .

    LPAREN          shift and go to state 22
    LBRACKET        shift and go to state 21
    COMMA           reduce using rule 4 (empty -> .)
    SCOLON          reduce using rule 4 (empty -> .)

    empty                          shift and go to state 23
    DimStar                        shift and go to state 24

state 17

    (29) ClassDecl -> CLASS ID . LBRACE Extension RBRACE

    LBRACE          shift and go to state 25


state 18

    (2) DeclSeq -> Decl DeclSeq .

    $end            reduce using rule 2 (DeclSeq -> Decl DeclSeq .)


state 19

    (11) VarDecl -> Type VarList SCOLON .

    CLASS           reduce using rule 11 (VarDecl -> Type VarList SCOLON .)
    INT             reduce using rule 11 (VarDecl -> Type VarList SCOLON .)
    BOOL            reduce using rule 11 (VarDecl -> Type VarList SCOLON .)
    ID              reduce using rule 11 (VarDecl -> Type VarList SCOLON .)
    VOID            reduce using rule 11 (VarDecl -> Type VarList SCOLON .)
    $end            reduce using rule 11 (VarDecl -> Type VarList SCOLON .)
    IF              reduce using rule 11 (VarDecl -> Type VarList SCOLON .)
    INCREMENT       reduce using rule 11 (VarDecl -> Type VarList SCOLON .)
    DECREMENT       reduce using rule 11 (VarDecl -> Type VarList SCOLON .)
    PRINT           reduce using rule 11 (VarDecl -> Type VarList SCOLON .)
    WHILE           reduce using rule 11 (VarDecl -> Type VarList SCOLON .)
    LBRACE          reduce using rule 11 (VarDecl -> Type VarList SCOLON .)
    DO              reduce using rule 11 (VarDecl -> Type VarList SCOLON .)
    FOR             reduce using rule 11 (VarDecl -> Type VarList SCOLON .)
    RETURN          reduce using rule 11 (VarDecl -> Type VarList SCOLON .)
    INPUT           reduce using rule 11 (VarDecl -> Type VarList SCOLON .)
    TRUE            reduce using rule 11 (VarDecl -> Type VarList SCOLON .)
    FALSE           reduce using rule 11 (VarDecl -> Type VarList SCOLON .)
    LPAREN          reduce using rule 11 (VarDecl -> Type VarList SCOLON .)
    NUMBER          reduce using rule 11 (VarDecl -> Type VarList SCOLON .)
    NEW             reduce using rule 11 (VarDecl -> Type VarList SCOLON .)
    RBRACE          reduce using rule 11 (VarDecl -> Type VarList SCOLON .)


state 20

    (18) VarList -> Var COMMA . VarList
    (18) VarList -> . Var COMMA VarList
    (19) VarList -> . Var
    (20) Var -> . ID DimStar

    ID              shift and go to state 27

    Var                            shift and go to state 15
    VarList                        shift and go to state 26

state 21

    (21) DimStar -> LBRACKET . RBRACKET
    (31) DimStar -> LBRACKET . RBRACKET DimStar

    RBRACKET        shift and go to state 28


state 22

    (22) FunDecl -> Type ID LPAREN . fseen FormalOpt RPAREN stmt
    (23) fseen -> . empty
    (4) empty -> .

    INT             reduce using rule 4 (empty -> .)
    BOOL            reduce using rule 4 (empty -> .)
    ID              reduce using rule 4 (empty -> .)
    VOID            reduce using rule 4 (empty -> .)
    RPAREN          reduce using rule 4 (empty -> .)

    empty                          shift and go to state 30
    fseen                          shift and go to state 29

state 23

    (30) DimStar -> empty .

    COMMA           reduce using rule 30 (DimStar -> empty .)
    SCOLON          reduce using rule 30 (DimStar -> empty .)
    PLUS            reduce using rule 30 (DimStar -> empty .)
    MINUS           reduce using rule 30 (DimStar -> empty .)
    MULT            reduce using rule 30 (DimStar -> empty .)
    DIVIDE          reduce using rule 30 (DimStar -> empty .)
    MOD             reduce using rule 30 (DimStar -> empty .)
    GREATERTHAN     reduce using rule 30 (DimStar -> empty .)
    GREATEROREQUAL  reduce using rule 30 (DimStar -> empty .)
    LESSTHAN        reduce using rule 30 (DimStar -> empty .)
    LESSOREQUAL     reduce using rule 30 (DimStar -> empty .)
    ISEQUAL         reduce using rule 30 (DimStar -> empty .)
    NOTEQUAL        reduce using rule 30 (DimStar -> empty .)
    AND             reduce using rule 30 (DimStar -> empty .)
    OR              reduce using rule 30 (DimStar -> empty .)
    DO              reduce using rule 30 (DimStar -> empty .)
    RPAREN          reduce using rule 30 (DimStar -> empty .)
    THEN            reduce using rule 30 (DimStar -> empty .)
    RBRACKET        reduce using rule 30 (DimStar -> empty .)


state 24

    (20) Var -> ID DimStar .

    COMMA           reduce using rule 20 (Var -> ID DimStar .)
    SCOLON          reduce using rule 20 (Var -> ID DimStar .)


state 25
